Update logo text from 'Gaming Hub' to 'Pagina Gamer'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Gaming Hub</div>
+        <div class="logo">Pagina Gamer</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#games">Games</a></li>
